--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -3,6 +3,38 @@
   overflow: hidden; }
   .social-card .interact {
     height: 400px; }
-  .social-card .comments {
-    height: 300px;
-    overflow-y: scroll; }
+    .social-card .interact .comments {
+      height: 300px;
+      overflow-y: scroll; }
+
+.sidebar {
+  border-right: 1px solid gray;
+  height: fit-content; }
+  .sidebar .profiles {
+    height: 75vh;
+    overflow-y: scroll;
+    overflow-x: hidden; }
+
+.conversations {
+  height: fit-content; }
+  .conversations .chat {
+    height: 70vh;
+    overflow-y: scroll;
+    overflow-x: hidden; }
+  .conversations .receive-bubble, .conversations .send-bubble {
+    height: fit-content;
+    color: white; }
+  .conversations .receive-message, .conversations .send-message {
+    border-radius: 20px; }
+
+@media only screen and (max-width: 600px) {
+  .social-card {
+    height: fit-content; }
+    .social-card .interact {
+      height: fit-content; }
+      .social-card .interact .comments {
+        height: fit-content; }
+      .social-card .interact .actions .card-title {
+        display: inline-block;
+        margin-left: 8px;
+        margin-top: 10px; } }
