--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,11 +1,12 @@
-.social-card {
-  height: 400px;
+.social-card .interact {
+  max-height: min-content;
   overflow: hidden; }
-  .social-card .interact {
-    height: 400px; }
-    .social-card .interact .comments {
-      height: 300px;
-      overflow-y: scroll; }
+  .social-card .interact img {
+    max-height: inherit; }
+  .social-card .interact .comments {
+    max-height: inherit;
+    height: 450px;
+    overflow-y: scroll; }
 
 .sidebar {
   border-right: 1px solid gray;
@@ -38,3 +39,36 @@
         display: inline-block;
         margin-left: 8px;
         margin-top: 10px; } }
+
+@media only screen and (max-width: 1024px) {
+  .social-card .interact {
+    max-height: min-content;
+    overflow: hidden; }
+    .social-card .interact img {
+      max-height: inherit; }
+    .social-card .interact .comments {
+      max-height: inherit;
+      height: 280px;
+      overflow-y: scroll; } }
+
+@media only screen and (max-width: 1280px) {
+  .social-card .interact {
+    max-height: min-content;
+    overflow: hidden; }
+    .social-card .interact img {
+      max-height: inherit; }
+    .social-card .interact .comments {
+      max-height: inherit;
+      height: 370px;
+      overflow-y: scroll; } }
+
+@media only screen and (max-width: 690px) {
+  .social-card .interact {
+    max-height: min-content;
+    overflow: hidden; }
+    .social-card .interact img {
+      max-height: inherit; }
+    .social-card .interact .comments {
+      max-height: inherit;
+      height: 200px;
+      overflow-y: scroll; } }
