Added Settings Page
Signed-off-by: VinayakTekade <vinayak.tekade@gmail.com>

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -9,12 +9,13 @@
     overflow-y: scroll; }
 
 .sidebar {
-  border-right: 1px solid gray;
   height: fit-content; }
   .sidebar .profiles {
     height: 75vh;
     overflow-y: scroll;
     overflow-x: hidden; }
+  .sidebar .option-title {
+    font-size: 30px; }
 
 .conversations {
   height: fit-content; }
