--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -14,12 +14,14 @@
 }
 
 .sidebar{
-    border-right: 1px solid gray;
     height: fit-content;
     .profiles{
         height: 75vh;
         overflow-y: scroll;
         overflow-x: hidden;
+    }
+    .option-title{
+        font-size: 30px;
     }
 }
 
@@ -38,6 +40,7 @@
         border-radius: 20px;
     }
 } 
+
 
 @media only screen and (max-width: 600px){
     .social-card {
