Fixed Actions for iPad screen
Signed-off-by: VinayakTekade <vinayak.tekade@gmail.com>

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -46,9 +46,9 @@
       .social-card .interact .comments {
         height: fit-content;
         padding: 0 5px; }
-      .social-card .interact .actions .card-title {
+      .social-card .interact .actions-panel .action {
         display: inline-block;
-        margin-left: 1vh; }
+        margin-left: 8px; }
   .messages-window {
     height: fit-content;
     overflow: hidden; }
