Added modal for comment
Signed-off-by: VinayakTekade <vinayak.tekade@gmail.com>

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -3,6 +3,9 @@
   overflow: hidden; }
   .social-card .interact img {
     height: 30vw; }
+  .social-card .interact .actions-panel .action {
+    display: block;
+    cursor: pointer; }
   .social-card .interact .comments {
     height: 30vw;
     overflow-y: scroll; }
