--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -7,6 +7,12 @@
             // max-height: 450px;
             height: 30vw;
         }
+        .actions-panel{
+            .action{
+                display: block;
+                cursor: pointer;
+            }
+        }
         .comments{
             // max-height: 450px;
             height: 30vw;
